--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-APP_ENV="dev"
-
 POSTGRES_HOST="localhost"
 POSTGRES_PORT=5432
 POSTGRES_DB="library"
 POSTGRES_USER="user"
 POSTGRES_PASSWORD="password"
+
+# APP_ENV=""
