--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.12"
 dependencies = [
     "asyncpg>=0.30.0",
     "fastapi[standard]>=0.116.1",
+    "passlib[bcrypt]>=1.7.4",
     "pydantic-settings>=2.10.1",
+    "pyjwt>=2.10.1",
     "sqlalchemy>=2.0.43",
     "sqlmodel>=0.0.24",
 ]
